# freezeme

./: .gitignore  README.md  pyproject.toml
freezeme/: glacier.py  main.py  settings.py  zipper.py
tests/: test_freezeme.py
