[tool.poetry]
name = "freezeme"
version = "0.1.0"
description = "backup utility, operated via CLI, stores on S3 glacier, inspired by git"
authors = ["Raphael Gabbarelli <raphael@gabbarelli.it>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
